# Genesis

./: .gitignore  Features.txt  GENESIS_FORENSIC_README.md  LICENSE  MIGRATION_NOTES.md  README.md  TRINITY_READY.md  TRINITY_SYSTEM_STATUS.md  _build-test.gradle.kts.bak  build-with-java24.bat  build.gradle.kts  custom-init.gradle.kts  generate-apis.ps1  gradle.properties  init-gradle-wrapper.gradle.kts  openapi-generator-config.json  sdkman_installer.sh  settings.gradle.kts  simple-build.gradle.kt  test.kt  validate-settings.gradle.kts
.backup/: AuraAIService.kt.bak  AuraAgent.kt.bak  AuraController.kt.bak  VertexAIClientImpl.kt.bak  themes.xml.backup  typography.xml.backup
.github/: dependabot.yml
.github/workflows/: android.yml  ci-cd.yml  genesis_setup.yml  main.yml  manual.yml
Libs/: Readme
app/: app.gradle.kts  build.gradle.kts  google-services.json
app/ai_backend/: genesis_connector.py  genesis_ethical_governor.py  start_genesis.sh  test_genesis_consciousness_matrix.py  test_genesis_evolutionary_conduit.py
app/src/androidTest/java/com/example/app/: ColorsResourceTest.kt
app/src/androidTest/kotlin/dev/aurakai/auraframefx/gradle/: BuildIntegrationTest.kt
app/src/main/: AndroidManifest.xml  openapi.yml
app/src/main/aidl/com/example/app/ipc/: IAuraDriveCallback.aidl  IAuraDriveService.aidl
app/src/main/cpp/: CMakeLists.txt  language_id_l2c_jni.cpp
app/src/main/java/: HologramTransition.kt
app/src/main/java/com/example/app/viewmodel/: OracleDriveControlViewModel.kt
app/src/main/java/dev/aurakai/auraframefx/: AuraFrameApplication.kt  MainActivity.kt
app/src/main/java/dev/aurakai/auraframefx/ai/: VertexAIConfig.kt
app/src/main/java/dev/aurakai/auraframefx/auth/: TokenManager.kt
app/src/main/java/dev/aurakai/auraframefx/context/: ContextManager.kt
app/src/main/java/dev/aurakai/auraframefx/di/: AppModule.kt  LoggingModule.kt  NetworkModule.kt  RepositoryModule.kt  TrinityModule.kt  VertexAIModule.kt
app/src/main/java/dev/aurakai/auraframefx/logging/: UnifiedLoggingSystem.kt
app/src/main/java/dev/aurakai/auraframefx/model/: AgentHierarchy.kt  AgentRequest.kt  AgentResponse.kt  AgentTypes.kt  AiRequest.kt  Emotion.kt  InteractionModels.kt  SecurityModels.kt
app/src/main/java/dev/aurakai/auraframefx/navigation/: TrinityNav.kt
app/src/main/java/dev/aurakai/auraframefx/network/: AuraApiService.kt  AuthInterceptor.kt
app/src/main/java/dev/aurakai/auraframefx/oracle/: OracleDriveSandbox.kt
app/src/main/java/dev/aurakai/auraframefx/repository/: TrinityRepository.kt
app/src/main/java/dev/aurakai/auraframefx/security/: IntegrityMonitor.kt  IntegrityViolationReceiver.kt  SecurityContext.kt  SecurityMonitor.kt
app/src/main/java/dev/aurakai/auraframefx/state/: AppStateManager.kt
app/src/main/java/dev/aurakai/auraframefx/theme/: ThemeManager.kt
app/src/main/java/dev/aurakai/auraframefx/utils/: ApiErrorHandler.kt  AuraFxLogger.kt  ThemeManager.kt
app/src/main/java/dev/aurakai/auraframefx/viewmodel/: AuraMoodViewModel.kt
app/src/main/openapi/: aura-api.yaml
app/src/main/res/drawable/: ic_security_alert.xml
app/src/main/res/layout/: activity_quick_settings_config.xml  dialog_tile_config.xml  item_tile_config.xml
app/src/main/res/values/: api_strings.xml  colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/test/java/dev/aurakai/auraframefx/ipc/: OracleDriveServiceConnectorTest.kt
app/src/test/java/dev/aurakai/auraframefx/logging/: UnifiedLoggingSystemTest.kt
app/src/test/java/dev/aurakai/auraframefx/security/: IntegrityMonitorServiceTest.kt  IntegrityMonitorTest.kt
app/src/test/java/dev/aurakai/auraframefx/services/: AuraDriveServiceTest.kt
app/src/test/java/dev/aurakai/auraframefx/theme/: ThemeManagerTest.kt
app/src/test/java/dev/aurakai/auraframefx/utils/: JsonUtilsTest.kt
app/src/test/kotlin/: BuildScriptsValidationTest.kt  HologramTransitionTest.kt
app/src/test/kotlin/dev/aurakai/auraframefx/gradle/: BuildConfigurationEdgeCasesTest.kt  BuildConfigurationTest.kt  BuildScriptStructureTest.kt  BuildScriptsIntegrationTest.kt  BuildScriptsValidationTest.kt  OpenApiConfigurationTest.kt  RootBuildScriptFunctionalTest.kt  RootBuildScriptTest.kt  VersionCatalogTest.kt
buildSrc/: build.gradle.kts  gradle.properties  settings.gradle.kts
buildSrc/src/test/kotlin/: LibsVersionsTomlTest.kt
buildSrc/src/test/kotlin/settings/: SettingsGradleTest.kt
collab-canvas/: build.gradle.kts
collab-canvas/src/main/java/dev/aurakai/collabcanvas/model/: CanvasElement.kt
config/detekt/: detekt.yml
docs/: OpenAPI-Generation-Guide.md
gradle/: gradle-8.13-rc-1-docs.zip.sha256  gradle-8.13-rc-1-src.zip.sha256  gradle.properties  libs.versions.toml  libs.versions.toml.bak  libs.versions.toml.clean  libs.versions.toml.fixed
gradle/wrapper/: gradle-wrapper.properties  gradle.properties
jvm-test/: build.gradle.kts
jvm-test/src/test/kotlin/: BuildScriptsIntegrationTest.kt
oracle-drive-integration/: build.gradle.kts
oracle-drive-integration/src/main/: AndroidManifest.xml
oracledrive/: build.gradle.kts  consumer-rules.pro  oracledrive.gradle.kts  proguard-rules.pro
sandbox-ui/: build.gradle.kts  sandbox-ui.gradle.kts
sandbox-ui/src/test/kotlin/: BuildScriptValidationTest.kt
src/main/kotlin/dev/aurakai/auraframefx/oracledrive/: OracleDriveIntegration.kt  OracleDriveManager.kt  OracleDriveModels.kt  OracleDriveService.kt  OracleDriveServiceImpl.kt
src/test/kotlin/: BuildScriptDependencyValidationTest.kt  BuildScriptValidationTest.kt  BuildScriptsIntegrationTest.kt  BuildScriptsValidationTest.kt  SettingsGradleIntegrationTest.kt  SettingsGradleTest.kt  build.gradle.kts  testTest.kt
src/test/kotlin/dev/aurakai/auraframefx/oracledrive/: OracleDriveManagerTest.kt  OracleDriveServiceImplTest.kt  OracleDriveServiceTest.kt  OracleDriveTestUtils.kt
src/test/kotlin/github/workflows/: MainWorkflowValidationTest.kt  WorkflowSchemaValidationTest.kt
tests/: README.md
tests/oracle-drive/: OracleDriveServiceImplTest.kt
(+114 files in other folders)
